# log_parser_viewer

./: .gitignore  LICENSE  README.md  parser.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1f76da31a250_init_tables.py
app/: __init__.py  config.py  server.py
app/api/: __init__.py
app/api/public/: __init__.py
app/api/public/v1/: __init__.py  log_messages.py
app/api/schemas/: log_message.py  more_messages.py
app/db/: __init__.py  base.py
app/db/models/: __init__.py  log.py  message.py
app/dto/: __init__.py  log.py  message.py
app/errors/: many_log_records.py
app/repository/: log.py  log_messages.py  messge.py
