[project]
name = "log-messages-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleks Ryzhkov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic (>=1.14.1,<2.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "aiopg (>=1.4.0,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
